--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "unionpedia-extractor",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "description": "Extract incoming and outgoing relations for a concept from unionpedia.org",
-  "main": "src/extractor.cheerio.js",
+  "main": "dist/unionpedia-extractor.cjs.js",
+  "module": "dist/unionpedia-extractor.es.js",
+  "types": "dist/extractor.cheerio.d.ts",
   "files": [
-    "src/extractor.cheerio.js"
+    "dist"
   ],
   "scripts": {
-    "test": "jest ./test/extractor.test.js",
-    "test:jsdom": "jest ./test/extractor.jsdom.test.js",
-    "test:performance": "node test/performance-test.js"
+    "build": "vite build -c vite.lib.config.ts",
+    "test": "jest test/extractor.test.ts",
+    "test:jsdom": "jest test/extractor.jsdom.test.ts"
   },
   "repository": {
     "type": "git",
@@ -21,14 +23,13 @@
     "relations",
     "concept"
   ],
-  "author": "armandos",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/mastercuber/unionpedia-extractor/issues"
   },
   "homepage": "https://github.com/mastercuber/unionpedia-extractor#readme",
   "engines": {
-    "node": ">= 16"
+    "node": ">= 15"
   },
   "publishConfig": {
     "registry": "https://repo.avensio.de/repository/npm-hosted/"
@@ -41,7 +42,10 @@
   "devDependencies": {
     "@types/follow-redirects": "^1.14.1",
     "@types/jest": "^29.2.5",
-    "jest": "^29.3.1",
-    "jsdom": "^21.0.0"
+    "jsdom": "^21.0.0",
+    "ts-jest": "^29.0.5",
+    "tslib": "^2.5.0",
+    "vite": "^4.0.4",
+    "vite-plugin-dts": "^1.7.1"
   }
 }
